<resources>
    <string name="app_name">MyBank</string>
    <string name="identifica_t">Identifica\'t</string>
    <string name="hola_inicia_la_teva_sessi">Hola, inicia la teva sessió</string>
    <string name="selecciona_el_teu_document">Seleciona el teu document</string>
    <string name="dni_o_targeta_de_resid_ncia">DNI o targeta de residència</string>
    <string name="passaport">Passaport</string>
    <string name="n_mero_de_document">Número de document</string>
    <string name="data_de_naixement">Data de naixement</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="continuar">Continuar</string>
    <string name="informaci_sobre_seguretat">Informació sobre seguretat</string>
    <string name="pol_tica_de_privacitat">Política de privacitat</string>
    <string name="mes_info">Més informació sobre seguretat</string>

    <string name="completa">Completa les posicions que falten de la teva clau de seguretat</string>
    <string name="no_recordo">No recordo la meva clau</string>
    <string name="enrera">Enrera</string>

    <string name="ing_dia_a_dia">Dia a dia</string>
    <string name="ing_inversion">Inversió i estalvis</string>
    <string name="ing_hipotecas">Hipoteques i prèstecs</string>
    <string name="ing_cn">Compte NÓMINA</string>
    <string name="ing_gc">Despeses comuns</string>
    <string name="ing_tc">Targeta crèdit</string>
    <string name="ing_cb">CaixaBank</string>
    <string name="ing_bn">Broker TARONJA</string>
    <string name="ing_fn_20_80">Fons TARONJA 20/80</string>
    <string name="ing_cnaranja">Coompte TARONJA</string>
    <string name="ing_hn">Hipoteca TARONJA</string>
    <string name="ing_disponible">Disponible</string>
    <string name="ing_p60000">Prèstec de fins 60.000 €</string>
    <string name="home">Inici</string>
    <string name="transferencies">Transferències</string>
    <string name="moneyup">Money up</string>
    <string name="contractar">Contractar</string>
    <string name="la_meva_imatge_d_avatar">La meva imatge d\'avatar</string>
    <string name="hola_novament">Hola novament!</string>
    <string name="no_s_c">No sóc</string>
    <string name="major_que"><![CDATA[>]]></string>
    <string name="menor_que"><![CDATA[<]]></string>
    <string name="cor_taronja">Cor taronja</string>
    <string name="targeta_de_cr_dit">Targeta de crèdit</string>
    <string name="broker">Broker</string>
    <string name="fons_d_inversi">Fons d\'inversió</string>
    <string name="compte_d_estalvis">Compte d\'estalvis</string>
    <string name="hipoteca">Hipoteca</string>
    <string name="oportunitat">Oportunitat</string>
    <string name="inici">Inici</string>
    <string name="transfer_ncies">Transferències</string>
    <string name="money_up">Money up</string>
    <string name="logotip_del_banc_ing">Logotip del Banc ING</string>
    <string name="buscar">Buscar</string>
    <string name="menu">Menú</string>

    <string name="error_dni">La has cagat</string>
    <string name="required_field">És un camp obligatori. Has d\'informar una dada</string>
    <string name="invalid_long_dni_nie">"Un DNI/NIE ha de tenir 9 caràcters de longitud"</string>
    <string name="invalid_mandatory_dni_nie">La dada és obligatoria</string>
    <string name="invalid_dni_nie">"El DNI/NIE introduït no és vàlid"</string>
    <string name="invalid_birth_date">Data de naixement no vàlida</string>
    <string name="ing_close">Tancar</string>
    <string name="ing_logo">logotip</string>

    <!-- Política de seguretat -->
    <string name="ing_noia_mirant_pantalla">Noia mirant la pantalla del mÃ²bil</string>
    <string name="ing_security_info_p1">Tens dubtes sobre l\'autenticitat dÂ´un missatge dÂ´ING? Escriu-nos a seguridad.internet@ing.es o truca\'ns al 91 206 66 66 i t\'ajudarem a sortir de dubtes.</string>
    <string name="ing_security_info_p2">Cada cop que accedeixes a la nostra web www.ing.es utilitzant la teva clau de seguretat, la teva informaciÃ³ s\'envia a travÃ©s del nostre Servidor de Tecnologia Segura. Aquest servidor et garanteix que les comunicacions es realitzen de forma xifrada i ha estat certificat per Digicert, entitat externa de mÃ xim prestigi a nivell mundial en provisiÃ³ d\'infraestructures de clau pÃºblica a l\'emissiÃ³ de certificats.</string>
    <string name="ing_security_info_p3">Per evitar el robatori i la suplantaciÃ³ d\'identitat o phising, mitjanÃ§ant el qual terceres persones es fan passar per empleats, o simulen la identitat del banc, utilitzant de forma fraudulenta el correu electrÃ²nic per solÂ·licitar-te la clau d\'accÃ©s, et recomanem seguir els consells segÃ¼ents:</string>
    <string name="ing_security_info_li_1">Recordeu que ING mai us demanarÃ , ni per telÃ¨fon ni per Internet, la vostra clau d\'accÃ©s al complet, tan sols posicions aleatÃ²ries.</string>
    <string name="ing_security_info_li_2">ING mai t\'enviarÃ  correus electrÃ²nics amb enllaÃ§os a www.ing.es. Desconfia de trucades o correus electrÃ²nics comunicant-te premis o regals. El mÃ©s aconsellable Ã©s teclejar sempre l\'adreÃ§a www.ing.es directament al vostre navegador d\'Internet.</string>
    <string name="ing_security_info_li_3">El teu usuari, contrasenya, etc. sÃ³n dades de carÃ cter personal i estrictament confidencials, que nomÃ©s s\'han de fer servir per accedir als serveis propis d\'ING. La cessiÃ³ de dades confidencials a terceres persones Ã©s responsabilitat del propietari dels mateixos.--></string>
    <string name="ing_security_info_p4">La clau de seguretat estÃ  composta pels 6 dÃ­gits que tu mateix tries en fer-te client d\'ING. Pots modificar-la sempre que vulguis.\nSi tens un Compte NÃ’MINA o Compte NoCompte, pots validar totes les operacions per mitjÃ  d\'elements de seguretat identificatius d\'ING.\nRecorda que ING mai et solÂ·licitarÃ , ni per correu electrÃ²nic ni per telÃ¨fon, que facilitis totes les posicions de la teva Clau de Seguretat.</string>
    <string name="ing_sebre_img_1">AquÃ­,\nsenzillament,\npots</string>
    <string name="ing_sobre_img_2">Benvingut al lloc on\nÃ©s possible fer-ho tot\ni fer-ho facilment</string>

    <!-- Privacitat -->
    <string name="politica_privacitat_titol1">Política de Privadesa per a clients i potencials clients d\'ING</string>
    <string name="politica_privacitat_text2">Us expliquem d\'una manera senzilla i transparent el tractament que fem de les vostres dades personals.</string>
    <string name="politica_privacitat_card1_text">Quines dades personals tractem?</string>
    <string name="politica_privacitat_card1_subtext">Només les dades necessàries per complir amb les finalitats previstes.</string>
    <string name="politica_privacitat_card2_text">Per què fem servir les teves dades?</string>
    <string name="politica_privacitat_card2_subtext">Només per a les finalitats que us expliquem en aquesta secció.</string>
    <string name="politica_privacitat_card3_text">Amb qui i per què compartim les teves dades?</string>
    <string name="politica_privacitat_card3_subtext">Compartim dades amb altres entitats del Grup ING i amb tercers. T\'expliquem per què.</string>
    <string name="politica_privacitat_card4_text">Quins són els teus drets i com exercir-los?</string>
    <string name="politica_privacitat_card4_subtext">Quins són els teus drets i com exercir-los?</string>
    <string name="politica_privacitat_card5_text">Quant de temps conservem les teves dades?</string>
    <string name="politica_privacitat_card5_subtext">Només el temps necessari per complir amb la finalitat per a què els recollim o per complir amb la llei.</string>
    <string name="politica_privacitat_card6_text">Com protegim les teves dades personals?</string>
    <string name="politica_privacitat_card6_subtext">Apliquem les mesures necessàries per garantir que les teves dades estiguin segures</string>
    <string name="saber_mes">Saber més</string>

    <string name="calendari">Calendari</string>

</resources>