<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="300dp"
    android:layout_height="700dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/ing_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNoia"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:alpha="0.3"
        android:contentDescription="@string/ing_noia_mirant_pantalla"
        android:src="@drawable/ing_noia_mirant_la_pantalla"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvSebreImg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/ing_sebre_img_1"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSobreImg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivNoia" />

    <TextView
        android:id="@+id/tvSobreImg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/ing_sobre_img_2"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivNoia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSebreImg1" />

    <TextView
        android:id="@+id/tvSecurityInfoP1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_p1"
        android:textColor="@color/secondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNoia" />

    <TextView
        android:id="@+id/tvSecurityInfoP2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_p2"
        android:textColor="@color/secondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoP1" />

    <TextView
        android:id="@+id/tvSecurityInfoP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_p3"
        android:textColor="@color/secondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoP2" />

    <ImageView
        android:id="@+id/ivBullet1"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_margin="12dp"
        android:background="@drawable/circle_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoP3" />

    <TextView
        android:id="@+id/tvSecurityInfoLi1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_li_1"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBullet1"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoP3" />

    <ImageView
        android:id="@+id/ivBullet2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_margin="12dp"
        android:background="@drawable/circle_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoLi1" />

    <TextView
        android:id="@+id/tvSecurityInfoLi2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_li_2"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBullet2"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoLi1" />

    <ImageView
        android:id="@+id/ivBullet3"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_margin="12dp"
        android:background="@drawable/circle_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoLi2" />

    <TextView
        android:id="@+id/tvSecurityInfoLi3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_li_3"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBullet3"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurityInfoLi2" />

    <TextView
        android:id="@+id/tvSecurityInfoP4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/primary"
        android:justificationMode="inter_word"
        android:text="@string/ing_security_info_p4"
        android:textColor="@color/secondary"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/btnTancar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSecurityInfoLi3" />

    <Button
        android:id="@+id/btnTancar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/ing_close"
        android:textColor="@color/on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSecurityInfoP4" />
</androidx.constraintlayout.widget.ConstraintLayout>